# KulKod

./: CMakeLists.txt  README.md
EnergyMeasurement/: CMakeLists.txt  energy_measurement.c  energy_measurement.h  energy_plugin.h  main.c  rapl.c  rapl.h  tplink_energy_measurement.py  tplink_plugin.c  tplink_plugin.h
Launcher/: CMakeLists.txt  launcher.c  launcher.h
Snake/: CMakeLists.txt  main.cpp
Snake/MCPython/: snake.py
Snake/MCSnake/: CMakeLists.txt  MCSnake.cpp  MCSnake.h  main.cpp
Snake/Model/: CMakeLists.txt  GameController.cpp  GameController.h  Map.cpp  Map.h  Snake.cpp  Snake.h  SnakeExample.h
Snake/TemplateSnake/: CMakeLists.txt  SnakeTemplate.cpp  SnakeTemplate.h  main.cpp  main.py
src/: AI.cpp  AI.h  CMakeLists.txt  rapl.c  rapl.h
test/: CMakeLists.txt  main.c  main.py  simple_test.c
